changed the margin

--- a/register.html
+++ b/register.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -39,7 +40,7 @@
       list-style: none;
       display: flex;
       flex-direction: row;
-      margin-bottom: 20%;
+      margin-bottom: 19%;
     }
 
     .hi a {
@@ -192,27 +193,27 @@
       <h1>Register To Join</h1>
       <div class="form">
         <div class="input-field">
-          <input type="text" required>
+          <input type="text" required name="fname">
           <label>Enter your First Name</label>
         </div>
         <div class="input-field">
-          <input type="text" required>
+          <input type="text" required name="lname">
           <label>Enter your Last Name</label>
         </div>
         <div class="input-field">
-          <input type="email" required maxlength="35">
+          <input type="email" required maxlength="35" name="email">
           <label>Enter your Email</label>
         </div>
         <div class="input-field">
-          <input type="date" required>
+          <input type="date" required name="date">
 
         </div>
         <div class="input-field">
-          <input type="text" required maxlength="3">
+          <input type="text" required maxlength="3" name="height">
           <label>Enter your Height</label>
         </div>
         <div class="input-field">
-          <input type="text" required maxlength="3">
+          <input type="text" required maxlength="3" name="Weight">
           <label>Enter your Weight</label>
         </div>
         <label for="">Do you have any medical issues !</label>
