--- a/last.html
+++ b/last.html
@@ -18,15 +18,15 @@
       color: white;
     }
 
-    body {
+    body{
       background-size: cover;
       font-family: Arial, sans-serif;
       background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' version='1.1' xmlns:xlink='http://www.w3.org/1999/xlink' xmlns:svgjs='http://svgjs.dev/svgjs' width='1440' height='560' preserveAspectRatio='none' viewBox='0 0 1440 560'%3e%3cg mask='url(%26quot%3b%23SvgjsMask1010%26quot%3b)' fill='none'%3e%3crect width='1440' height='560' x='0' y='0' fill='rgba(28%2c 38%2c 41%2c 1)'%3e%3c/rect%3e%3cpath d='M0 0L764.54 0L0 638.45z' filter='url(%23SvgjsFilter1011)' fill='rgba(42%2c 42%2c 45%2c 1)'%3e%3c/path%3e%3cpath d='M0 560L764.54 560L0 -78.45000000000005z' filter='url(%23SvgjsFilter1011)' fill='rgba(42%2c 42%2c 45%2c 1)'%3e%3c/path%3e%3cpath d='M1440 560L675.46 560L1440 -78.45000000000005z' filter='url(%23SvgjsFilter1011)' fill='rgba(42%2c 42%2c 45%2c 1)'%3e%3c/path%3e%3cpath d='M1440 0L675.46 0L1440 638.45z' filter='url(%23SvgjsFilter1011)' fill='rgba(42%2c 42%2c 45%2c 1)'%3e%3c/path%3e%3c/g%3e%3cdefs%3e%3cmask id='SvgjsMask1010'%3e%3crect width='1440' height='560' fill='white'%3e%3c/rect%3e%3c/mask%3e%3cfilter height='130%25' id='SvgjsFilter1011'%3e%3cfeGaussianBlur in='SourceAlpha' stdDeviation='5' result='TopLeftG'%3e%3c/feGaussianBlur%3e%3cfeOffset dx='-5' dy='-5' in='TopLeftG' result='TopLeftO'%3e%3c/feOffset%3e%3cfeComponentTransfer in='TopLeftO' result='TopLeftC'%3e%3cfeFuncA type='linear' slope='0.7'%3e%3c/feFuncA%3e%3c/feComponentTransfer%3e%3cfeGaussianBlur in='SourceAlpha' stdDeviation='5' result='TopRightG'%3e%3c/feGaussianBlur%3e%3cfeOffset dx='5' dy='-5' in='TopRightG' result='TopRightO'%3e%3c/feOffset%3e%3cfeComponentTransfer in='TopRightO' result='TopRightC'%3e%3cfeFuncA type='linear' slope='0.7'%3e%3c/feFuncA%3e%3c/feComponentTransfer%3e%3cfeGaussianBlur in='SourceAlpha' stdDeviation='5' result='BottomLeftG'%3e%3c/feGaussianBlur%3e%3cfeOffset dx='-5' dy='5' in='BottomLeftG' result='BottomLeftO'%3e%3c/feOffset%3e%3cfeComponentTransfer in='BottomLeftO' result='BottomLeftC'%3e%3cfeFuncA type='linear' slope='0.7'%3e%3c/feFuncA%3e%3c/feComponentTransfer%3e%3cfeGaussianBlur in='SourceAlpha' stdDeviation='5' result='BottomRightG'%3e%3c/feGaussianBlur%3e%3cfeOffset dx='5' dy='5' in='BottomRightG' result='BottomRightO'%3e%3c/feOffset%3e%3cfeComponentTransfer in='BottomRightO' result='BottomRightC'%3e%3cfeFuncA type='linear' slope='0.7'%3e%3c/feFuncA%3e%3c/feComponentTransfer%3e%3cfeMerge%3e%3cfeMergeNode in='TopLeftC'%3e%3c/feMergeNode%3e%3cfeMergeNode in='TopRightC'%3e%3c/feMergeNode%3e%3cfeMergeNode in='BottomLeftC'%3e%3c/feMergeNode%3e%3cfeMergeNode in='BottomRightC'%3e%3c/feMergeNode%3e%3cfeMergeNode in='SourceGraphic'%3e%3c/feMergeNode%3e%3c/feMerge%3e%3c/filter%3e%3c/defs%3e%3c/svg%3e");
     }
 
-    .content {
+    .content{
       height: 600px;
-      width: 74%;
+      width:74%;
       margin-top: 100px;
       margin-left: auto;
       margin-right: auto;
@@ -61,7 +61,7 @@
       backdrop-filter: blur(20px);
     }
 
-    .form form h2 {
+    .form form h2{
 
       background: linear-gradient(135deg, black 20%, black 90%);
       color: white;
@@ -165,6 +165,7 @@
       height: 100px;
       position: sticky;
       top: 0px;
+
     }
 
     .flex a {
@@ -200,7 +201,7 @@
       color: #fff;
       display: inline-block;
       border: 1px solid white;
-      margin-left: 20%;
+      margin-left: 60%;
     }
 
     .btn:hover {
@@ -218,17 +219,18 @@
 <body>
   <div class="menu">
 
-    <div class="flex">
-      <div class="x"><a href="index.html" style="color: #fff; font-size: 40px; margin-left: -50%;">Fitness Plus <span style="color: gray;">+</span></a>
+    <div class="flex" >
+      <div class="x"><a href="index.html" style="color: #fff; font-size: 40px; margin-left: -260px; " >Fitness Plus <span style="color: gray;">+</span></a>
       </div>
-      <ul class="nav">
-        <li class="hi"><a href="about.html">About</a></li>
-        <li class="hi"><a href="bmi.html">Calculate BMI</a></li>
+      <ul class="nav" style="margin-left: 15%;">
+        <li class="hi" style="margin-left: -60px;"><a href="about.html">About</a></li>
+        <li class="hi" style="margin-left: 20px;"><a href="bmi.html">Calculate BMI</a></li>
         <li class="hi"><a href="contact.html">Our Team</a></li>
         <li class="hi"><a href="last.html">Contact Us</a></li>
+        <a href="register.html" class="btn">Register</a>
       </ul>
 
-      <a href="register.html" class="btn">Register</a>
+     
 
     </div>
 
