menu bar modified

--- a/last.html
+++ b/last.html
@@ -137,18 +137,22 @@
       box-shadow: 0px 0px 5px white, 0px 0px 30px white, 0px 0px 90px white;
     }
 
+    
+    .img{
+      margin-left: -5%;
+    }
+    .img_2,.img_3{
+      margin-left: -5%;
+    }
     .nav {
       list-style: none;
       display: flex;
       flex-direction: row;
     }
-    .content li{
-      margin-left: 5%;
-    }
 
     .hi a {
-      margin: 15px;
-      color: white;
+      margin: 30px;
+      color: #fff;
     }
 
     .hi:hover a {
@@ -160,17 +164,17 @@
       width: 100%;
       background: linear-gradient(to right, black 50%, gray);
       margin-left: auto;
-      margin-right: auto;
+      margin-bottom: 9%;
       text-align: center;
       height: 100px;
       position: sticky;
       top: 0px;
-
     }
 
     .flex a {
       font-size: 20px;
       text-decoration: none;
+      margin-right: -10%;
     }
 
     .flex {
@@ -201,40 +205,37 @@
       color: #fff;
       display: inline-block;
       border: 1px solid white;
-      margin-left: 60%;
+      margin-left: 20%;
     }
 
     .btn:hover {
       background-color: black;
       box-shadow: 0px 0px 20px white, 0px 0px 25px white, 0px 0px 30px white;
     }
-    .img{
-      margin-left: -5%;
-    }
-    .img_2,.img_3{
-      margin-left: -5%;
-    }
+   
   </style>
 </head>
 <body>
   <div class="menu">
+    <div class="flex">
 
-    <div class="flex" >
-      <div class="x"><a href="index.html" style="color: #fff; font-size: 40px; margin-left: -260px; " >Fitness Plus <span style="color: gray;">+</span></a>
+      <div class="x">
+        <a href="index.html" style="color: #fff; font-size: 40px; margin-left: -110%;">Fitness Plus <span style="color: gray;">+</span></a>
       </div>
-      <ul class="nav" style="margin-left: 15%;">
-        <li class="hi" style="margin-left: -60px;"><a href="about.html">About</a></li>
-        <li class="hi" style="margin-left: 20px;"><a href="bmi.html">Calculate BMI</a></li>
+
+      <ul class="nav">
+        <li class="hi"><a href="about.html">About</a></li>
+        <li class="hi"><a href="bmi.html">Calculate BMI</a></li>
         <li class="hi"><a href="contact.html">Our Team</a></li>
         <li class="hi"><a href="last.html">Contact Us</a></li>
-        <a href="register.html" class="btn">Register</a>
       </ul>
 
-     
+      <a href="register.html" class="btn">Register</a>
 
     </div>
 
   </div><br>
+
 
 
 
